--- a/src/components/PerfilUsuario/perfil.css
+++ b/src/components/PerfilUsuario/perfil.css
@@ -17,6 +17,39 @@
 .leftProfileContainer > a {
   color: grey;
 }
+.deuda-container{
+
+}
+.estadodeuda-container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.deuda-span{
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.aldia-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.aldia-container>div>img{
+  width: 20%;
+}
+.aldia-container>div{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .leftProfileContainer .table-edit-container {
   position: relative;
   text-align: center;
@@ -135,7 +168,6 @@
   display: flex;
   height: 100%;
   position: relative;
-  padding-left: 0.5rem;
   justify-content: space-evenly;
   border-radius: 0.5rem;
   border: 0.2rem rgb(36, 36, 36) solid;
@@ -148,12 +180,98 @@
   flex-direction: column;
 }
 .mercadopagoContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 30%;
+}
+.loader-barra-container{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+.loader-barra-mp{
+  display: block;
+  position: relative;
+  height: 12px;
+  width: 80%;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.loader-barra-mp::after {
+  content: '';
+  width: 40%;
+  height: 100%;
+  background: #f78360;
   position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  animation: animloader-barra-mp 2s linear infinite;
+}
+.acept-container{
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
   width: 50%;
-  bottom: 0;
+  height: 20%;
+  background-color: #ffb45f;
+  border-radius: .5rem;
+  border: .1rem solid black;
+  font-weight: bold;
+
+}
+.acept-container>span{
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  
+}
+.continuar-cancelar-container{
+  display: flex;
+  width: 50%;
+  justify-content: space-between;
+
+}
+.continuar-cancelar-container>button:first-child{
+  background-color: rgb(59, 135, 59);
+font-weight: bold;
+color: white;
+}
+.continuar-cancelar-container>button:first-child:hover{
+  border: .1rem solid black;
+}
+.continuar-cancelar-container>button:last-child:hover{
+  border: .1rem solid black;
+}
+.continuar-cancelar-container>button:last-child{
+  background-color: rgb(247, 60, 60);
+  font-weight: bold;
+  color: white;
+}
+@keyframes animloader-barra-mp {
+  0% {
+    left: 0;
+    transform: translateX(-100%);
+  }
+  100% {
+    left: 100%;
+    transform: translateX(0%);
+  }
+}
+.carnet-container{
+  display: flex;
+  justify-content: end;
+  width: 100%;
 }
 .pagarContainer {
-  position: absolute;
   bottom: 1.5rem;
 }
 .pagarContainer > button {
@@ -324,7 +442,6 @@
 .names-create-profile-container {
   display: flex;
   flex-direction: column;
-  
 }
 .photo-container {
   display: flex;
@@ -334,39 +451,37 @@
   position: relative;
 }
 .photo-container > img {
-  border: .1rem solid orangered;
+  border: 0.1rem solid orangered;
   border-radius: 50%;
   width: 150px;
   height: 150px;
 }
-.fileContModal>input{
+.fileContModal > input {
   display: none;
+}
 
-  }
-  
- .fileContModal{
-    position: absolute;
-    width: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    height: 2rem;
-    background-color: rgba(62, 62, 62, 0.603);
-    bottom: -.5rem;
-  }
- .input-error-container{
+.fileContModal {
+  position: absolute;
+  width: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  height: 2rem;
+  background-color: rgba(62, 62, 62, 0.603);
+  bottom: -0.5rem;
+}
+.input-error-container {
   display: flex;
   flex-direction: column;
- }
- .input-error-container>span{
+}
+.input-error-container > span {
   color: red;
- }
+}
 
- .update-perfil{
+.update-perfil {
   font-weight: bold;
-  width: 30%;
-  border: .1rem solid orangered;
-  border-radius: .5rem;
+  border: 0.1rem solid orangered;
+  border-radius: 0.5rem;
   color: orangered;
- }
+}
